--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,7 +1,107 @@
+
+.site_bg_image {
+    background-color: #0b3647;
+    background: url(/img/BG_5.png);
+    background-repeat: no-repeat;
+    background-position: top center;
+    background-size: cover;
+}
+header{
+    background-color: #fff;
+}
+header .nav-link{
+    color: black;
+    border: 2px solid #fff;
+}
+.navbar i{
+    color: #00a2b8;
+}
+.navbar-toggler{
+    color: white;
+}
+
+header .nav-link:hover{
+    color: #00a2b8;
+    border-bottom: 2px solid #00a2b8;
+}
+.main{
+    padding-top: 70px;
+}
 .filter-site {
-    border: 10px solid #5ed8ed;
+    border: 15px solid #5ed8ed;
+    background-color: rgba(0, 0, 0, 0.3);
+}
+
+.filter-site i {
+    width: 20px;
 }
 
 .decription-site {
-    border: 10px solid #fff;
+    border: 15px solid #fff;
+}
+
+.photo-item {
+    overflow: hidden;
+    margin: 0 5px;
+    border: 15px solid #0096ae;
+    height: 200px;
+    width: 200px;
+}
+.photo-item img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+.btn-prev,
+.btn-next {
+    border-radius: 50%;
+    font-weight: 600;
+    position: absolute;
+    top: 50%;
+    z-index: 1;
+    margin-top: -1em;
+}
+
+.btn-prev {
+    left: 0;
+}
+
+.btn-next {
+    right: 0;
+}
+
+.footer {
+    background-color: #5ed9eb;
+}
+
+.bi-triangle {
+    transform: rotate(90deg);
+    transform-origin: center center;
+    color: #0096ae;
+    position: relative;
+    top: 50%;
+    left: 0;
+    right: 0;
+    margin-top: -1.25em;
+}
+.footer table {
+    border-collapse: separate;
+    border-spacing: 1rem 10px;
+}
+.f-contact-item {
+    margin: 10px 0;
+}
+.f-contact-item i:first-child {
+    margin-right: 10px;
+}
+.f-contact-item .btn {
+    border-radius: 0;
+}
+.f-contact-item .btn i {
+    margin-right: 0;
+    height: 16px;
+    width: 16px;
+}
+.navbar {
+    margin-bottom: 0;
 }
