--- a/public/css/main.css
+++ b/public/css/main.css
@@ -99,9 +99,45 @@ header .nav-link:hover {
     border: 15px solid #0096ae;
     height: 200px;
     width: 200px;
+    position: relative;
+    display: inline-block;
+}
+.photo-item:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.3);
+    opacity: 0;
+    transition: 0.3s;
 }
 
-.photo-item img {
+.photo-item:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    background: url(/img/search.png);
+    opacity: 0;
+    background-size: 30%;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    transition: 0.3s;
+    z-index: 100;
+}
+
+.photo-item:hover:before,
+.photo-item:hover:after {
+    opacity: 1;
+    transition: 0.3s;
+}
+
+.photo-item img:first-child {
     object-fit: cover;
     width: 100%;
     height: 100%;
@@ -165,4 +201,15 @@ header .nav-link:hover {
 
 .navbar {
     margin-bottom: 0;
+}
+
+.gallery-item{
+    box-shadow: 0 0 5px rgba(50, 50, 50, 0.3);
+    padding: 10px;
+    border-radius: 15px;
+}
+.gallery-image-container img{
+    width: 100%;
+    height: 100%;
+    border-radius: 15px;
 }
