--- a/public/css/main.css
+++ b/public/css/main.css
@@ -207,9 +207,42 @@ header .nav-link:hover {
     box-shadow: 0 0 5px rgba(50, 50, 50, 0.3);
     padding: 10px;
     border-radius: 15px;
+    background-size: cover;
+    background-position: 50%;
+    height:200px;
+}
+
+.gallery-item-desc{
+    background-color: #ebc8b2;
+    padding: 10px;
+    border-radius: 15px;
 }
 .gallery-image-container img{
     width: 100%;
     height: 100%;
     border-radius: 15px;
+}
+
+.admin-nav .nav-link{
+    border-radius: 10px;
+    font-weight: bolder;
+}
+
+.admin-nav .nav-link,
+.admin-nav i{
+    color: white;
+    border: none;
+}
+
+.admin-nav .nav-link.active{
+    background-color: #0d6efd;
+}
+
+.news-img-item{
+    border-radius: 15px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 200px;
+    width: 300px;
 }
