--- a/public/css/main.css
+++ b/public/css/main.css
@@ -52,7 +52,6 @@ header .nav-link:hover {
 
 .news-item {
     background-color: #009eb7;
-    color: #fff;
     font-weight: 500;
 }
 
@@ -64,13 +63,13 @@ header .nav-link:hover {
     border-radius: 20px;
 }
 
-.news-item button::after {
+.news-item .btn-news-data::after {
     content: "\0020\00bb";
 }
 
 .news-img {
     background-size: cover;
-    height: 150px;
+    height: 50px;
 }
 
 .news-head {
@@ -81,6 +80,7 @@ header .nav-link:hover {
     position: absolute;
     left: 0;
     width: 100%;
+    text-shadow: 1px 1px 2px black;
 }
 
 .news-line {
@@ -102,6 +102,7 @@ header .nav-link:hover {
     position: relative;
     display: inline-block;
 }
+
 .photo-item:after {
     content: "";
     position: absolute;
@@ -203,42 +204,43 @@ header .nav-link:hover {
     margin-bottom: 0;
 }
 
-.gallery-item{
+.gallery-item {
     box-shadow: 0 0 5px rgba(50, 50, 50, 0.3);
     padding: 10px;
     border-radius: 15px;
     background-size: cover;
     background-position: 50%;
-    height:200px;
+    height: 200px;
 }
 
-.gallery-item-desc{
+.gallery-item-desc {
     background-color: #ebc8b2;
     padding: 10px;
     border-radius: 15px;
 }
-.gallery-image-container img{
+
+.gallery-image-container img {
     width: 100%;
     height: 100%;
     border-radius: 15px;
 }
 
-.admin-nav .nav-link{
+.admin-nav .nav-link {
     border-radius: 10px;
     font-weight: bolder;
 }
 
 .admin-nav .nav-link,
-.admin-nav i{
+.admin-nav i {
     color: white;
     border: none;
 }
 
-.admin-nav .nav-link.active{
+.admin-nav .nav-link.active {
     background-color: #0d6efd;
 }
 
-.news-img-item{
+.news-img-item {
     border-radius: 15px;
     background-size: cover;
     background-position: center;
