--- a/public/css/main.css
+++ b/public/css/main.css
@@ -87,13 +87,12 @@ header .nav-link:hover {
     border-bottom: 3px solid #fff;
 }
 
-.news-data-img{
+.news-data-img {
     border-radius: 15px;
 }
 
 .decription-site {
     border: 15px solid #fff;
-    color: white;
     background-color: #0b3647;
 }
 
@@ -190,6 +189,15 @@ header .nav-link:hover {
     margin: 10px 0;
 }
 
+.f-contact-item a {
+    color: black;
+    text-decoration: none;
+}
+
+.f-contact-links-items a {
+    color: #fff;
+}
+
 .f-contact-item i:first-child {
     margin-right: 10px;
 }
@@ -252,4 +260,18 @@ header .nav-link:hover {
     background-repeat: no-repeat;
     height: 200px;
     width: 300px;
+}
+.contacts-head p {
+    margin: 0;
+}
+.contacts-head a {
+    color: black;
+    text-decoration: none;
+}
+.contacts-head a:hover {
+    color: #00a2b8;
+}
+
+.about-us-title{
+    color: #5bdaeb;
 }
