--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4,6 +4,7 @@
     background-repeat: no-repeat;
     background-position: top center;
     background-size: cover;
+    min-height: 100vh;
 }
 
 header {
