select theme dev complete

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -127,7 +127,7 @@ header .nav-link:hover {
     right: 0;
     bottom: 0;
     margin: auto;
-    background: url(/img/search.png);
+    background: url(/img/Search.png);
     opacity: 0;
     background-size: 30%;
     background-repeat: no-repeat;
