--- a/public/css/themes/Sunset.css
+++ b/public/css/themes/Sunset.css
@@ -1,12 +1,22 @@
 .site_bg_image{
-    background: url('/img/BG_5.png');
-    background-repeat: no-repeat;
-    background-position: top center;
-    background-size: cover;
+    background-image: url('/img/SunsetTheme.png');
 }
 
 header .nav-link {
     color: #fff;
+}
+
+.contacts-head a {
+    color: #fff;
+}
+
+.contacts-head a:hover {
+    color: #00a2b8;
+}
+
+.about-us-title {
+    color: #3389ac;
+    
 }
 
 .main .navbar i {
@@ -18,8 +28,8 @@ header .nav-link {
 }
 
 header .nav-link:hover {
-    color: #fe3b01;
-    border-bottom: 2px solid #fe3b01;
+    color: #fff;
+    border: 2px solid #9901b8;
 }
 
 .filter-site {
@@ -60,6 +70,7 @@ header .nav-link:hover {
 
 .footer {
     background-color: #0b3647;
+    color: #fff;
 }
 
 .bi-triangle {
