--- a/public/css/themes/SeaBreeze.css
+++ b/public/css/themes/SeaBreeze.css
@@ -1,10 +1,11 @@
-.sea-breeze-bg{
-    background-image: url('/img/BG_5.png');
+.sea-breeze-bg {
+    background-image: url('/img/SeaBreezeTheme.png');
     background-repeat: no-repeat;
     background-position: top center;
     background-size: cover;
 }
-.header-light{
+
+.header-light {
     background-color: #fff;
 }
 
@@ -56,18 +57,20 @@ header .nav-link:hover {
 }
 
 .about-us-title {
-    color: #009eb7;  
+    color: #009eb7;
 }
-.about-us-btn{
+
+.about-us-btn {
     background-color: #d20117;
     color: #fff;
 }
 
 .photo-slider .btn-prev,
-.photo-slider .btn-next{
+.photo-slider .btn-next {
     background-color: #d20117;
     color: #fff;
 }
+
 .photo-item {
     border: 15px solid #0096ae;
 }
@@ -88,6 +91,7 @@ header .nav-link:hover {
     color: #fff;
     background-color: #0b3647;
 }
+
 .f-contact-links-items a:hover {
     background-color: #d20117;
     color: #fff;
