--- a/public/css/main.css
+++ b/public/css/main.css
@@ -29,18 +29,30 @@ header .nav-link {
     position: absolute;
     top: 15%;
     left: 0;
-    background-color: red;
     border-radius: 0 15px 15px 0;
     display: flex;
-    z-index: 99999;
+    z-index: 99;
 }
 
 .collapse-special-orders {
     display: none;
+    padding: 20px 0 20px 10px;
+}
+
+.special-order-img{
+    width: 70px;
+    height: 70px;
+}
+
+.btn-content-special-order:focus{
+    box-shadow: none;
 }
 
 .toggler-special-orders {
-    padding: 10px 20px;
+    padding: 15px 13px 15px 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .text-rotate {
@@ -49,6 +61,7 @@ header .nav-link {
     transform: rotate(180deg);
     padding-right: 10px;
     font-weight: 600;
+    text-transform: uppercase;
 }
 
 .btn-special-orders {
@@ -114,6 +127,7 @@ header .nav-link {
 
 .news-data-img {
     border-radius: 15px;
+    width: 100%;
 }
 
 .photo-item {
@@ -278,4 +292,22 @@ header .nav-link {
 
 .contacts-head a {
     text-decoration: none;
+}
+.dropdown-menu{
+    padding: 0;
+    border-radius: 10px;
+    background-color: #212529;
+    color: #fff;
+}
+.admin-nav .nav-link:hover{
+    background-color: #0d6efd;
+}
+.dropdown-menu li .nav-link{
+    border-radius: 0;
+}
+.dropdown-menu li:first-child .nav-link{
+    border-radius: 10px 10px 0 0;
+}
+.dropdown-menu li:last-child .nav-link{
+    border-radius: 0 0 10px 10px;
 }
