--- a/public/css/themes/BlueSky.css
+++ b/public/css/themes/BlueSky.css
@@ -31,6 +31,19 @@ header .nav-link:hover {
     border: 2px solid #6aa2af;
 }
 
+.special-orders-block {
+    background-color: #040410;
+}
+
+.text-rotate {
+    color: #fff;
+}
+
+.btn-special-orders{
+    background-color: #ff9c00;
+    color: #fff;
+}
+
 .filter-site {
     border: 15px solid #6aa2af;
 }
