--- a/public/css/themes/LightAir.css
+++ b/public/css/themes/LightAir.css
@@ -31,6 +31,19 @@ header .nav-link:hover {
     border: 2px solid #2b4e74;
 }
 
+.special-orders-block {
+    background-color: #2b4e76;
+}
+
+.text-rotate {
+    color: #fff;
+}
+
+.btn-special-orders{
+    background-color: #4ffff4;
+    color: #2b4e76;
+}
+
 .filter-site {
     border: 15px solid #76b1ff;
 }
