--- a/public/css/themes/SeaBreeze.css
+++ b/public/css/themes/SeaBreeze.css
@@ -34,6 +34,19 @@ header .nav-link:hover {
     border: 2px solid #00a2b8;
 }
 
+.special-orders-block {
+    background-color: #0b3647;
+}
+
+.text-rotate {
+    color: #fff;
+}
+
+.btn-special-orders{
+    background-color: #d40019;
+    color: #fff;
+}
+
 .filter-site {
     border: 15px solid #5ed8ed;
 }
