теперь картинки уменьшаются в разрешении)))))))) и теперьт сайт полностью видимо оптимизирован

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -39,12 +39,12 @@ header .nav-link {
     padding: 20px 0 20px 10px;
 }
 
-.special-order-img{
+.special-order-img {
     width: 70px;
     height: 70px;
 }
 
-.btn-content-special-order:focus{
+.btn-content-special-order:focus {
     box-shadow: none;
 }
 
@@ -112,6 +112,7 @@ header .nav-link {
 
 .news-head img {
     width: 100%;
+    height: 100%;
 }
 
 .news-head .news-date {
@@ -174,7 +175,7 @@ header .nav-link {
     transition: 0.3s;
 }
 
-.photo-item img:first-child {
+.photo-item img {
     object-fit: cover;
     width: 100%;
     height: 100%;
@@ -293,21 +294,26 @@ header .nav-link {
 .contacts-head a {
     text-decoration: none;
 }
-.dropdown-menu{
+
+.dropdown-menu {
     padding: 0;
     border-radius: 10px;
     background-color: #212529;
     color: #fff;
 }
-.admin-nav .nav-link:hover{
+
+.admin-nav .nav-link:hover {
     background-color: #0d6efd;
 }
-.dropdown-menu li .nav-link{
+
+.dropdown-menu li .nav-link {
     border-radius: 0;
 }
-.dropdown-menu li:first-child .nav-link{
+
+.dropdown-menu li:first-child .nav-link {
     border-radius: 10px 10px 0 0;
 }
-.dropdown-menu li:last-child .nav-link{
+
+.dropdown-menu li:last-child .nav-link {
     border-radius: 0 0 10px 10px;
 }
