--- a/public/css/themes/BlueAir.css
+++ b/public/css/themes/BlueAir.css
@@ -31,11 +31,13 @@ header .nav-link:hover {
     border: 2px solid #6aa2af;
 }
 
-.special-orders-block {
+.special-orders-block,
+.special-orders-mobile {
     background-color: #020410;
 }
 
-.text-rotate {
+.text-rotate,
+.special-orders-mobile-title {
     color: #fff;
 }
 
