--- a/public/css/themes/SeaBreeze.css
+++ b/public/css/themes/SeaBreeze.css
@@ -34,11 +34,13 @@ header .nav-link:hover {
     border: 2px solid #00a2b8;
 }
 
-.special-orders-block {
+.special-orders-block,
+.special-orders-mobile {
     background-color: #0b3647;
 }
 
-.text-rotate {
+.text-rotate,
+.special-orders-mobile-title {
     color: #fff;
 }
 
