--- a/public/css/main.css
+++ b/public/css/main.css
@@ -32,6 +32,7 @@ header .nav-link {
     border-radius: 0 15px 15px 0;
     display: flex;
     z-index: 99;
+    width: min-content;
 }
 
 .collapse-special-orders {
